--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -8,53 +8,37 @@
       *ngIf="kbForm"
       [formGroup]="kbForm"
       (ngSubmit)="saveKb()">
-      <div>
-        <label class="title-s">
-          {{ 'generic.uid' | translate }}
-        </label>
-        <pa-input
-          formControlName="uid"
-          externalLabel
-          readonly></pa-input>
-      </div>
+      <pa-input
+        formControlName="uid"
+        readonly>
+        {{ 'generic.uid' | translate }}
+      </pa-input>
 
-      <div>
-        <label class="title-s">
-          {{ 'generic.slug' | translate }}
-        </label>
-        <pa-input
-          formControlName="slug"
-          externalLabel
-          [errorMessages]="validationMessages['slug']"></pa-input>
-      </div>
+      <pa-input
+        formControlName="slug"
+        [errorMessages]="validationMessages['slug']">
+        {{ 'generic.slug' | translate }}
+      </pa-input>
 
-      <div>
-        <label class="title-s">
-          {{ 'generic.name' | translate }}
-        </label>
-        <pa-input
-          formControlName="title"
-          externalLabel
-          [errorMessages]="validationMessages['title']"></pa-input>
-      </div>
+      <pa-input
+        formControlName="title"
+        [errorMessages]="validationMessages['title']">
+        {{ 'generic.name' | translate }}
+      </pa-input>
 
-      <div>
-        <label class="title-s">
-          {{ 'generic.description' | translate }}
-        </label>
-        <pa-textarea
-          formControlName="description"
-          externalLabel
-          [rows]="4"></pa-textarea>
-      </div>
+      <pa-textarea
+        formControlName="description"
+        [rows]="4">
+        {{ 'generic.description' | translate }}
+      </pa-textarea>
 
       <div
         formGroupName="config"
         *ngFor="let conf of displayedLearningConfigurations">
         <div class="label">
           <label class="title-s">{{ 'stash.create.' + conf.id + '.label' | translate }}</label>
-          <div>
-            <small>{{ 'stash.create.' + conf.id + '.help' | translate }}</small>
+          <div class="body-xs">
+            {{ 'stash.create.' + conf.id + '.help' | translate }}
           </div>
         </div>
         <div class="options">
