--- a/libs/common/src/lib/resources/edit-resource/_edit-resource.tokens.scss
+++ b/libs/common/src/lib/resources/edit-resource/_edit-resource.tokens.scss
@@ -15,3 +15,4 @@ $header-separator: inset 0 -1px 0 $color-neutral-light;
 $footer-separator: inset 0 1px 0 $color-neutral-light;
 
 $annotation-header-height: rhythm(9);
+$spacing-top: rhythm(1);
