--- a/libs/user/src/lib/profile/profile.component.scss
+++ b/libs/user/src/lib/profile/profile.component.scss
@@ -29,27 +29,19 @@
 
   .field {
     margin-bottom: rhythm(3);
-    display: flex;
-    align-items: center;
-    .field-label {
-      flex: 0 0 150px;
-    }
-    .field-input {
-      flex: 1 1 0;
-    }
+
     &:last-of-type {
       margin-bottom: 0;
     }
 
     pa-radio-group {
-      display: flex !important;
-      gap: rhythm(4);
+      display: block;
+      margin-top: rhythm(1);
     }
   }
 
   label {
-    padding-right: rhythm(2);
-    font-weight: var(--stf-font-weight-semibold);
+    font-weight: $font-weight-semi-bold;
   }
 
   .actions {
