--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -109,18 +109,18 @@
                 <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
               </a>
             </div>
-            <div
-              *ngIf="isAPIKeysEnabled | async"
-              class="group-items">
-              <a
-                [routerLink]="kbUrl + '/keys'"
-                routerLinkActive="active"
-                class="nav-link">
-                <pa-icon name="lock-off"></pa-icon>
-                <span class="nav-link-title">{{ 'stash.side.api_keys' | translate }}</span>
-              </a>
-            </div>
           </ng-container>
+          <div
+            *ngIf="(isAPIKeysEnabled | async) && (isAdmin | async)"
+            class="group-items">
+            <a
+              [routerLink]="kbUrl + '/keys'"
+              routerLinkActive="active"
+              class="nav-link">
+              <pa-icon name="lock-off"></pa-icon>
+              <span class="nav-link-title">{{ 'stash.side.api_keys' | translate }}</span>
+            </a>
+          </div>
         </ng-container>
 
         <div
