[sc-6442] Implement option to disable thumbnails

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -152,6 +152,12 @@
             formControlName="displayMetadata">
             {{ 'stash.widgets.displayMetadata.label' | translate }}
           </pa-toggle>
+          <pa-toggle
+            labelOnRight
+            help="stash.widgets.hideThumbnails.help"
+            formControlName="hideThumbnails">
+            {{ 'stash.widgets.hideThumbnails.label' | translate }}
+          </pa-toggle>
         </div>
 
         <pa-toggle
