[sc-6917] Remove the tier price from the dashboard

--- a/apps/dashboard/src/app/account/account-status/account-status.component.scss
+++ b/apps/dashboard/src/app/account/account-status/account-status.component.scss
@@ -11,12 +11,8 @@
   font-weight: $font-weight-semi-bold;
 }
 
-.price {
+.expiration {
   color: $color-primary-regular;
-}
-
-.unit {
-  color: $color-neutral-regular;
 }
 
 .buttons{
