Improve login form validation
- Add email validation in login form
- Disabled login button until the form is valid
- Fix translation
- Add several data-cy markers to help make e2e tests more robust

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -1,5 +1,6 @@
 <div class="knowledge-box-home">
   <div
+    data-cy="home-endpoint-container"
     class="endpoint-container"
     *ngIf="!!(endpoint | async)">
     <div class="title-s">{{ 'stats.endpoint' | translate }}</div>
