--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -44,6 +44,7 @@
   </pa-option>
   <pa-separator></pa-separator>
   <pa-option
+    data-cy="logout"
     icon="log-out"
     (click)="logout()">
     {{ 'generic.logout' | translate }}
