--- a/libs/user/src/lib/signup/signup.component.html
+++ b/libs/user/src/lib/signup/signup.component.html
@@ -10,6 +10,7 @@
       {{ error | translate }}
     </div>
     <form
+      data-cy="signup-form"
       class="signup-form"
       [formGroup]="signupForm"
       (ngSubmit)="submitForm()">
