option to disable fulltext in chat

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -158,6 +158,12 @@
             formControlName="hideThumbnails">
             {{ 'stash.widgets.hideThumbnails.label' | translate }}
           </pa-toggle>
+          <pa-toggle
+            labelOnRight
+            help="stash.widgets.noBM25forChat.help"
+            formControlName="noBM25forChat">
+            {{ 'stash.widgets.noBM25forChat.label' | translate }}
+          </pa-toggle>
         </div>
 
         <pa-toggle
