--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -43,7 +43,7 @@
           [ngTemplateOutlet]="sliderTemplate"
           [ngTemplateOutletContext]="{
             param: 'generative',
-            text: 'billing.quotas.answers'
+            text: 'billing.quotas.generative'
           }"></ng-container>
         <div class="separator"></div>
         <h3 class="title-m">{{ 'billing.quotas.train' | translate }}</h3>
