--- a/apps/dashboard/src/app/farewell/farewell.component.html
+++ b/apps/dashboard/src/app/farewell/farewell.component.html
@@ -1,6 +1,6 @@
 <stf-user-container>
   <div class="message">
-    <h1>{{ ((feedback | async) ? 'farewell.thanks_time' : 'farewell.thanks_trust') | translate }}</h1>
-    <div>{{ ((feedback | async) ? 'farewell.response_submitted' : 'farewell.see_again') | translate }}</div>
+    <h1>{{ 'farewell.thanks_trust' | translate }}</h1>
+    <div>{{ 'farewell.see_again' | translate }}</div>
   </div>
 </stf-user-container>
