--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -9,7 +9,11 @@
       {{ 'generic.back' | translate }}
     </nsi-back-button>
 
-    <h2 class="select-kb-title">{{ account.title }}</h2>
+    <h2
+      class="select-kb-title"
+      [paEllipsisTooltip]="account.title">
+      {{ account.title }}
+    </h2>
 
     <pa-button
       *ngIf="canManage | async"
